--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-art-template": "^1.0.1",
+    "express-jwt": "^5.3.3",
     "express-session": "^1.17.1",
     "formidable": "^1.2.2",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.22"
   }
